<resources>
    <string name="app_name">Word Wizard</string>
    <string name="share_app">Share_app</string>
    <string name="send">Send us a feedback</string>
    <string name="rate_app">Rate app on Google Play</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="privacy">Privacy Policy</string>
    <string name="terms">Terms of Service</string>
    <string name="main_button">Text</string>
    <string name="describe_menu">menu</string>
    <string name="describe_subscription">subscription</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="save">Save</string>
    <string name="recognize">Recognize</string>
    <string name="qr_code">QR-Code</string>
    <string name="recognized_text">Распознанный текст:</string>
    <string name="digital_ink">Digital Ink</string>
    <string name="recognize_error">Something go wrong.Try again</string>
    <string name="time">time</string>
    <string name="text_start_recognize">Какой-то текст</string>
    <string name="empty_text_recognize">*Empty Text*</string>

    <string name="set_description_recognize">Empty Photo</string>
    <string name="image_description_drawer">Word Wizard Logo</string>
    <string name="google_account_image_description">Account Image</string>
    <string name="image_card_description">Card Photo</string>
    <string name="download_screen_description">Download Screen</string>
    <string name="card_copy_description">Copy Button</string>
    <string name="card_share_description">Share Button</string>
    <string name="download_description">Download Button</string>
    <string name="detect_button_qr">detect</string>
    <string name="textView_qr">Here will be the text</string>
    <string name="popupmenu_pdf">PDF</string>
    <string name="popupmenu_txt">TXT</string>
    <string name="popupmenu_png">PNG</string>
    <string name="nav_settings">Settings</string>
</resources>