<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.WordWizard"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:background="@color/plate_color"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:contentDescription="@string/image_description_drawer" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:gravity="center"
            style="@style/DrawerHeader"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:padding="15dp">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_image"
            android:contentDescription="@string/google_account_image_description" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textSize="20sp"
                style="@style/DrawerHeader"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="15sp"
                style="@style/DrawerHeader"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>