<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/second_color"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="@font/dmserifdisplay_regular"
        android:textColor="@color/text_color"
        android:text="@string/camera"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="@font/dmserifdisplay_regular"
        android:textColor="@color/text_color"
        android:text="@string/photo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="@font/dmserifdisplay_regular"
        android:textColor="@color/text_color"
        android:text="@string/digital_ink"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="@font/dmserifdisplay_regular"
        android:textColor="@color/text_color"
        android:text="@string/qr_code"/>

</LinearLayout>