<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_dialog"
    android:backgroundTint="@color/bottom_sheet"
    android:orientation="vertical">
    
    <androidx.cardview.widget.CardView
        android:layout_width="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="4dp"
        android:layout_marginHorizontal="180dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="120dp"
        android:backgroundTint="@color/drag_handler"
        android:alpha="0.4"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Camera"
        style="@style/BottomSheetDialog"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:text="@string/camera"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/dashed_underline_bottom" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Photo"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        style="@style/BottomSheetDialog"
        android:text="@string/photo"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/dashed_underline_bottom" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Digital_Ink"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        style="@style/BottomSheetDialog"
        android:text="@string/digital_ink"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/dashed_underline_bottom" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/QR_Code"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        style="@style/BottomSheetDialog"
        android:text="@string/qr_code"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/dashed_underline_bottom" />

</LinearLayout>