<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:theme="@style/Theme.WordWizard"
    tools:openDrawer=""
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="21dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/describe_menu"
                android:src="@drawable/menu"
                android:focusable="true"
                android:clickable="true">

            </ImageView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                style="@style/TextHeader"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/RV"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/describe_subscription"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/diamond" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id = "@+id/rcView"
            android:layout_width="match_parent"
            android:layout_weight="50"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="end"
                style="@style/Base.Button"
                android:text="@string/main_button" />
    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/second_color"
        app:headerLayout="@layout/fragment_nav_drawer_header"
        app:itemTextColor="@color/text_color"
        app:menu="@menu/nav_menu_drawer"/>

</androidx.drawerlayout.widget.DrawerLayout>
