<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Design.Light.NoActionBar"
    android:orientation="vertical">



    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:background="@color/plate_color"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:fontFamily="@font/dmserifdisplay_regular"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:padding="15dp">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_image"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:fontFamily="@font/dmseriftext_regular"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:fontFamily="@font/dmseriftext_regular"/>
        </LinearLayout>


    </LinearLayout>





</LinearLayout>