<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Design.Light.NoActionBar"
    tools:context=".RecognizeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_margin="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:fontFamily="@font/dmseriftext_regular"
        android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/image_none"
            android:padding="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="20dp"
            android:padding="8dp"
            android:fontFamily="@font/dmseriftext_regular"
            android:text="@string/qr_code"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/captureImage_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:text="@string/Recognize"
            android:fontFamily="@font/dmseriftext_regular"
            android:textSize="15sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/Save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:text="@string/save"
            android:fontFamily="@font/dmseriftext_regular"
            android:textSize="15sp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>